--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -12960,9 +12960,9 @@
       <PlayerMaxCount>0</PlayerMaxCount>
       <GridMaxCount>1</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
-      <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
-      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPC>false</AllowedForNPC>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>false</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
