--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -15499,5 +15499,245 @@
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
     </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_RadioAntenna/LargeBlockCompactRadioAntenna</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_BroadcastController/LargeBlockBroadcastController</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_BroadcastController/SmallBlockBroadcastController</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_TransponderBlock/LargeBlockTransponder</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_TransponderBlock/SmallBlockTransponder</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_InteriorLight/LargeBlockInsetWallLight</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_Cockpit/LargeBlockConsoleModuleInvertedCorner</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_Cockpit/LargeBlockConsoleModuleScreens</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ButtonPanel/LargeBlockConsoleModuleButtons</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_TextPanel/SmallBlockConsoleModuleScreens</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ButtonPanel/SmallBlockConsoleModuleButtons</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_InteriorLight/CorridorLight</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_InteriorLight/CorridorNarrowStowage</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_Door/LargeBlockNarrowDoor</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_Door/LargeBlockNarrowDoorHalf</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_InteriorLight/TrussPillarLight</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_InteriorLight/TrussPillarLightSmall</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_Decoy/TrussPillarDecoy</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_TerminalBlock/LargeAssemblerIndustrial</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_TerminalBlock/LargeRefineryIndustrial</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
   </Settings>
 </BlockSaveData>
