update to v29 config and unfuck some bad defualts

--- a/Storage/3149625043.sbm_CoreSystems/CoreSystemsServer.cfg
+++ b/Storage/3149625043.sbm_CoreSystems/CoreSystemsServer.cfg
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-16"?>
 <ServerSettings xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <Version>28</Version>
+  <Version>29</Version>
   <Debug>-1</Debug>
   <AdvancedOptimizations>true</AdvancedOptimizations>
   <DirectDamageModifer>1</DirectDamageModifer>
@@ -58,4 +58,6 @@
       </ArmorOverride>
     </ArmorOverrides>
   </DefinitionOverrides>
+  <LargeGridDamageMultiplier>1</LargeGridDamageMultiplier>
+  <SmallGridDamageMultiplier>1</SmallGridDamageMultiplier>
 </ServerSettings>
