--- a/Storage/3206802244.sbm_RTS/RelativeTopSpeed.cfg
+++ b/Storage/3206802244.sbm_RTS/RelativeTopSpeed.cfg
@@ -22,7 +22,7 @@
   <SmallGrid_MaxMass>400000</SmallGrid_MaxMass>
   <SmallGrid_MaxBoostSpeed>400</SmallGrid_MaxBoostSpeed>
   <SmallGrid_ResistanceMultiplyer>1</SmallGrid_ResistanceMultiplyer>
-  <EnableAngularLimits>true</EnableAngularLimits>
+  <EnableAngularLimits>false</EnableAngularLimits>
   <SmallGrid_AngularMassMult>0.1</SmallGrid_AngularMassMult>
   <SmallGrid_AngularCruiseMult>0.25</SmallGrid_AngularCruiseMult>
   <LargeGrid_AngularMassMult>0.1</LargeGrid_AngularMassMult>
