Add Restrictions to Colorable Solar
Limit of 3 Per Type

--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -11793,7 +11793,7 @@
     </SerializableBlockSetting>
     <SerializableBlockSetting>
       <Type>MyObjectBuilder_SolarPanel/LargeBlockColorableSolarPanel</Type>
-      <PlayerMaxCount>0</PlayerMaxCount>
+      <PlayerMaxCount>3</PlayerMaxCount>
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
@@ -11805,7 +11805,7 @@
     </SerializableBlockSetting>
     <SerializableBlockSetting>
       <Type>MyObjectBuilder_SolarPanel/LargeBlockColorableSolarPanelCorner</Type>
-      <PlayerMaxCount>0</PlayerMaxCount>
+      <PlayerMaxCount>3</PlayerMaxCount>
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
@@ -11817,7 +11817,7 @@
     </SerializableBlockSetting>
     <SerializableBlockSetting>
       <Type>MyObjectBuilder_SolarPanel/LargeBlockColorableSolarPanelCornerInverted</Type>
-      <PlayerMaxCount>0</PlayerMaxCount>
+      <PlayerMaxCount>3</PlayerMaxCount>
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
@@ -11833,8 +11833,8 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
-      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>false</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
@@ -11845,8 +11845,8 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
-      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>false</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
@@ -11857,8 +11857,8 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
-      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>false</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
       <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
